--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,10 @@
 {
+  "globals": {
+    "React": true
+  },
   "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
     "next/core-web-vitals",
     "plugin:prettier/recommended",
     "plugin:tailwindcss/recommended"
