--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^4.16.1",
     "@clerk/themes": "^1.6.0",
+    "@heroicons/react": "^2.0.17",
     "@tailwindcss/forms": "^0.5.3",
     "classnames": "^2.3.2",
     "next": "^13.3.0",
