--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.17",
     "@tailwindcss/forms": "^0.5.3",
+    "@tanstack/react-query": "^4.29.3",
     "classnames": "^2.3.2",
     "next": "^13.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "socket.io-client": "^4.6.1",
     "typescript": "5.0.3"
   },
   "devDependencies": {
