--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint --cache --fix",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@clerk/nextjs": "^4.16.1",
@@ -34,9 +35,14 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-tailwindcss": "^3.11.0",
+    "husky": ">=6",
+    "lint-staged": ">=10",
     "postcss": "^8.4.21",
     "prettier": "^2.8.7",
     "prettier-plugin-tailwindcss": "^0.2.7",
     "tailwindcss": "^3.3.1"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": "npm run lint"
   }
 }
