--- a/package.json
+++ b/package.json
@@ -43,6 +43,6 @@
     "tailwindcss": "^3.3.1"
   },
   "lint-staged": {
-    "*.{ts,tsx}": "npm run lint"
+    "*.{ts,tsx}": "eslint --cache --fix"
   }
 }
