--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@heroicons/react": "^2.0.17",
     "@tailwindcss/forms": "^0.5.3",
     "@tanstack/react-query": "^4.29.3",
+    "axios": "^1.3.6",
     "classnames": "^2.3.2",
     "next": "^13.3.0",
     "react": "^18.2.0",
