--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,5 +8,8 @@
     "next/core-web-vitals",
     "plugin:prettier/recommended",
     "plugin:tailwindcss/recommended"
-  ]
+  ],
+  "rules": {
+    "react-hooks/exhaustive-deps": "error"
+  }
 }
