--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@clerk/nextjs": "^4.16.1",
     "@clerk/themes": "^1.6.0",
+    "@faker-js/faker": "^7.6.0",
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.17",
     "@tailwindcss/forms": "^0.5.3",
