--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tanstack/react-query": "^4.29.3",
     "axios": "^1.3.6",
     "classnames": "^2.3.2",
+    "immer": "^10.0.1",
     "next": "^13.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
